--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,6 +1484,97 @@
     "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.savefig(fn_out, dpi =200)     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you need to download the GPM data you can use a tool we developed. Just provide the email address that is registered with the PPM. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "login =  'email@address'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to \"/Users/km357\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gpym import server\n",
+    "output_dir = home\n",
+    "pps_client = server.PPS(usr = login, save_dir = output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To list all 2A.GPM.DPR files on a given date, provide a date string of the fiollowing format 'yyyy-mm-dd' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S012932-E030203.004783.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S030204-E043435.004784.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S043436-E060707.004785.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S060708-E073939.004786.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S073940-E091211.004787.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S091212-E104443.004788.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S104444-E121714.004789.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S121715-E134946.004790.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S134947-E152218.004791.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S152219-E165450.004792.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S165451-E182722.004793.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S182723-E195954.004794.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S195955-E213226.004795.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S213227-E230458.004796.V06A.HDF5\n",
+      "/gpmallversions/V06/2015/01/01/radar/2A.GPM.DPR.V8-20180723.20150101-S230459-E003729.004797.V06A.HDF5\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_str = '2015-01-01'\n",
+    "pps_client.list_files(date_str, ver = 6,  prod = '2A.GPM.DPR.V' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To download all the 2A.GPM.DPR files on a given date do not specify granule number (gran variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pps_client.download_files(date_str, prod = '2A.GPM.DPR.V', \n",
+    "        directory = 'radar', verbose = True, ver = 6, gran = 4789) "
    ]
   }
  ],
